2005-09-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password, tramp-multi-action-password):
	Compile the password prompt from `method', `user' and `host'.
	Sometimes it isn't obvious which password to enter, for example
	with remote files offered by recentf.el, or with multiple steps.
	Suggested by Robert Marshall <robert@chezmarshall.freeserve.co.uk>.

2005-09-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-set-visited-file-modtime)
	(tramp-handle-insert-file-contents)
	(tramp-handle-write-region): Insert special handling for
	`last-coding-system-used' again, it still seems to be
	necessary (unlike stated before).  Reported by Toshinori Sugita
	<sugita@d-pad.co.jp>

2005-08-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler-alist)
	(tramp-file-name-for-operation): Add `make-auto-save-file-name'.
	(tramp-handle-make-auto-save-file-name): Rename from
	`tramp-make-auto-save-file-name'.
	(tramp-exists-file-name-handler): New defun.
	(tramp-advice-make-auto-save-file-name): Make defadvice only when
	`make-auto-save-file-name' is not a magic file name operation.

2005-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-password-prompt-regexp): There might be other
	words before trailing ":".  Reported by Kurt Steinkraus
	<kurt@steinkraus.us>.
	(tramp-chunksize): Improve docstring.
	(tramp-set-auto-save-file-modes): Octal integer code #o600 breaks
	Emacs 20.  Use `tramp-octal-to-decimal' therefore.  Reported by
	Christian Joergensen <bugs@razor.dk>.

2005-08-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-chunksize): Improve docstring.

2005-08-07  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.50 released.

	* tramp.el: Remove defvar of `last-coding-system-used' in the
	XEmacs case; not necessary anymore.
	(tramp-handle-set-visited-file-modtime)
	(tramp-handle-insert-file-contents)
	(tramp-handle-write-region): No special handling for